Enable GrContext support in the shared main thread context provider

This prevents a DCHECK when running with either --show-fps-counter or
--show-paint-rects together with --enable-gpu-rasterization. The DCHECK
is triggered by cc::HeadsUpDisplayLayerImpl::UpdateHudTexture that makes
use of the GrContext when gpu rasterization is enabled.

Bug: 837246, 810159
Change-Id: I74d2b1390d975dd783736bb1c12114ed4c7cbb0a
Reviewed-on: https://chromium-review.googlesource.com/1078267
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Justin Novosad <junov@chromium.org>
Commit-Queue: Mostyn Bramley-Moore <mostynb@vewd.com>
Cr-Commit-Position: refs/heads/master@{#563207}
Former-commit-id: 905b8cac7b58d60a0003c4c413da212b37889e53